// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders title 1`] = `
<div>
  <h1>
    BOOKS
  </h1>
</div>
`;

exports[`renders title and booklist after the component mount 1`] = `
<div>
  <h1>
    BOOKS
  </h1>
  <li>
    book3
  </li>
  <li>
    book 4
  </li>
</div>
`;
